# midi-visualizer

./: CMakeLists.txt
src/: MIDI.cpp  MIDI.hpp  main.cpp  readbytes.cpp
